# kicad-database-utils

./: .gitignore  LICENSE  Makefile  README.md  add_part.py  capacitor_1276-1123-1-ND.txt  component.py  led_160-1647-1-ND.txt  main.py  opamp_296-35279-1-ND.txt  pot_91A2A-B28-B13_B13L-ND.txt  print_utils.py  pyproject.toml  requirements.txt  resistor_YAG2320CT-ND.txt  run_tests.py  test_add_part.py  test_component.py
api_samples/: connector_WM4800-ND.txt
partdb/: add_part.py  component.py
sample_parts/: MMPQ3904FSCT-ND.csv  diode_MRA4004T3GOSCT-ND.txt
sample_parts_csv/: 10-ECE-A1HN100UBCT-ND.csv  1276-1123-1-ND.csv  160-1445-1-ND.csv  1830-1106-1-ND.csv  1N4148FSCT-ND.csv  296-21866-1-ND.csv  296-35279-1-ND.csv  2N3904FS-ND.csv  311-0.0GRCT-ND.csv  493-13313-1-ND.csv  497-1593-1-ND.csv  609-3218-ND.csv  754-1615-ND.csv  BAT54WS-FDICT-ND.csv  BAV99TPMSCT-ND.csv  CKN9112CT-ND.csv  CP-3524SJCT-ND.csv  ERA-8AEB162V.csv  LM317HVT_NOPB-ND.csv  LM7912CT_NOPB-ND.csv  MMPQ3904FSCT-ND.csv  MMSZ5231B-FDICT-ND.csv  RC0603JR-070RL.csv  RNCP0603FTD10R0.csv  STM32F042K4T6TR-ND.csv  WM22646-ND.csv  YAG2320CT-ND.csv  graphic_made_with_kicad.csv  resistors.csv
src/partdb/: add_part.py  api_helpers.py  cli.py  component.py  config.py  db.py  generate_series_csv.py  gui.py  gui_model.py  print_utils.py
tests/: digikey_mocks.py  test_add_part.py  test_cli.py  test_component.py  test_db.py  test_external_api.py  test_gui_model.py
